--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -10,8 +10,8 @@
 	<string>app-store</string>
 	<key>provisioningProfiles</key>
 	<dict>
-		<key>com.qeylor.ios</key>
-		<string>QP6U59S75Y_dis</string>
+		<key>com.niyeox.ios</key>
+		<string>comniyeoxios</string>
 	</dict>
 	<key>signingCertificate</key>
 	<string>Apple Distribution</string>
@@ -20,7 +20,7 @@
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>QP6U59S75Y</string>
+	<string>J7Z29KK757</string>
 	<key>uploadSymbols</key>
 	<false/>
 </dict>
